--- a/index.html
+++ b/index.html
@@ -12,29 +12,94 @@
       <main class="container d-flex align-items-center justify-content-center alto-100">
           <div class="row">
             <!-- columna izquierda -->
-              <div class="col-12 col-lg-9 bg-primary">
+              <div class="col-12 col-lg-9">
                 <div class="row">
-                  <div class="col-12 col-lg-8 bg-dark">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A quos inventore, sed. Facere doloremque nobis recusandae quis molestiae reprehenderit libero odio, est error ad ipsum enim iure rerum asperiores qui.</p>
+                  <div class="col-12 col-lg-8 p-2">
+                    <article class="card h-100 bg-success">
+                      <div class="card-body">
+                        <div class="d-flex mb-3">
+                          <img class="border border-secondary border-2 rounded-circle" src="images/image-daniel.jpg" alt="">
+                          <div class="ps-3">
+                            <h6 class="m-0 h6">Daniel Clifford</h6>
+                            <p class="m-0 h6">Lorem ipsum.</p>
+                          </div>
+                        </div>
+                        <div>
+                          <p class="h6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium earum sequi, nulla vitae alias dolores quae cum error quod inventore. Est vitae et quod blanditiis nesciunt, quo voluptatibus animi, obcaecati.</p>
+                          <p class="fs-6 lh-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo fuga atque rem, hic sint possimus blanditiis eligendi! Magnam, laborum delectus dolores numquam incidunt excepturi reiciendis? Hic, non nostrum eligendi officiis.</p>
+                        </div>
+                      </div>
+                    </article>
                   </div>
-                  <div class="col-12 col-lg-4 bg-success">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A quos inventore, sed. Facere doloremque nobis recusandae quis molestiae reprehenderit libero odio, est error ad ipsum enim iure rerum asperiores qui.</p>
+                  <div class="col-12 col-lg-4 p-2">
+                    <article class="card h-100 bg-primary">
+                      <div class="card-body">
+                        <div class="d-flex mb-3">
+                          <img class="border border-secondary border-2 rounded-circle" src="images/image-jeanette.jpg" alt="">
+                          <div class="ps-3">
+                            <h6 class="m-0 h6">Daniel Clifford</h6>
+                            <p class="m-0 h6">Lorem ipsum.</p>
+                          </div>
+                        </div>
+                        <div>
+                          <p class="h6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium earum sequi, nulla vitae alias dolores quae cum error quod inventore. Est vitae et quod blanditiis nesciunt, quo voluptatibus animi, obcaecati.</p>                        </div>
+                      </div>
+                    </article>
                   </div>
-                  <div class="col-12 col-lg-4 bg-danger">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A quos inventore, sed. Facere doloremque nobis recusandae quis molestiae reprehenderit libero odio, est error ad ipsum enim iure rerum asperiores qui.</p>
+                  <div class="col-12 col-lg-4 p-2">
+                    <article class="card h-100 bg-warning">
+                      <div class="card-body">
+                        <div class="d-flex mb-3">
+                          <img class="border border-secondary border-2 rounded-circle" src="images/image-jonathan.jpg" alt="">
+                          <div class="ps-3">
+                            <h6 class="m-0 h6">Daniel Clifford</h6>
+                            <p class="m-0 h6">Lorem ipsum.</p>
+                          </div>
+                        </div>
+                        <div>
+                          <p class="h6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium earum sequi, nulla vitae alias dolores quae cum error quod inventore. Est vitae et quod blanditiis nesciunt, quo voluptatibus animi, obcaecati.</p>
+                        </div>
+                      </div>
+                    </article>
                   </div>
-                  <div class="col-12 col-lg-8 bg-warning">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A quos inventore, sed. Facere doloremque nobis recusandae quis molestiae reprehenderit libero odio, est error ad ipsum enim iure rerum asperiores qui.</p>
+                  <div class="col-12 col-lg-8 p-2">
+                    <article class="card h-100 bg-danger">
+                      <div class="card-body">
+                        <div class="d-flex mb-3">
+                          <img class="border border-secondary border-2 rounded-circle" src="images/image-kira.jpg" alt="">
+                          <div class="ps-3">
+                            <h6 class="m-0 h6">Daniel Clifford</h6>
+                            <p class="m-0 h6">Lorem ipsum.</p>
+                          </div>
+                        </div>
+                        <div>
+                          <p class="h6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium earum sequi, nulla vitae alias dolores quae cum error quod inventore. Est vitae et quod blanditiis nesciunt, quo voluptatibus animi, obcaecati.</p>
+                          <p class="fs-6 lh-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo fuga atque rem, hic sint possimus blanditiis eligendi! Magnam, laborum delectus dolores numquam incidunt excepturi reiciendis? Hic, non nostrum eligendi officiis.</p>
+                        </div>
+                      </div>
+                    </article>
                   </div>
                 </div>
               </div>
 
 
             <!-- columna derecha -->
-            <div class="col-12 col-lg-3 bg-secondary">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsa
-              quos fuga alias eligendi rerum neque? Sed in dolorem ratione numquam,
-              magnam optio? Fugiat cum omnis, ipsum vel totam suscipit.</p>
+            <div class="col-12 col-lg-3 p-2">
+              <article class="card h-100 bg-secondary">
+                <div class="card-body">
+                  <div class="d-flex mb-3">
+                    <img class="border border-secondary border-2 rounded-circle" src="images/image-patrick.jpg" alt="">
+                    <div class="ps-3">
+                      <h6 class="m-0 h6">Daniel Clifford</h6>
+                      <p class="m-0 h6">Lorem ipsum.</p>
+                    </div>
+                  </div>
+                  <div>
+                    <p class="h6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium earum sequi, nulla vitae alias dolores quae cum error quod inventore. Est vitae et quod blanditiis nesciunt, quo voluptatibus animi, obcaecati.</p>
+                    <p class="fs-6 lh-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo fuga atque rem, hic sint possimus blanditiis eligendi! Magnam, laborum delectus dolores numquam incidunt excepturi reiciendis? Hic, non nostrum eligendi officiis.</p>
+                  </div>
+                </div>
+              </article>
             </div>
           </div>
       </main>
