--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>testimonial grid with bootstrap 5.0</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;300;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
       <main class="container d-flex align-items-center justify-content-center alto-100">
@@ -15,7 +17,7 @@
               <div class="col-12 col-lg-9">
                 <div class="row">
                   <div class="col-12 col-lg-8 p-2">
-                    <article class="card h-100 bg-success">
+                    <article class="card h-100 bg-primary bg-suc text-white fondo-card shadow">
                       <div class="card-body">
                         <div class="d-flex mb-3">
                           <img class="border border-secondary border-2 rounded-circle" src="images/image-daniel.jpg" alt="">
@@ -32,7 +34,7 @@
                     </article>
                   </div>
                   <div class="col-12 col-lg-4 p-2">
-                    <article class="card h-100 bg-primary">
+                    <article class="card h-100 bg-success text-white shadow">
                       <div class="card-body">
                         <div class="d-flex mb-3">
                           <img class="border border-secondary border-2 rounded-circle" src="images/image-jeanette.jpg" alt="">
@@ -47,7 +49,7 @@
                     </article>
                   </div>
                   <div class="col-12 col-lg-4 p-2">
-                    <article class="card h-100 bg-warning">
+                    <article class="card h-100 bg-secondary shadow">
                       <div class="card-body">
                         <div class="d-flex mb-3">
                           <img class="border border-secondary border-2 rounded-circle" src="images/image-jonathan.jpg" alt="">
@@ -63,7 +65,7 @@
                     </article>
                   </div>
                   <div class="col-12 col-lg-8 p-2">
-                    <article class="card h-100 bg-danger">
+                    <article class="card h-100 bg-dark text-white shadow">
                       <div class="card-body">
                         <div class="d-flex mb-3">
                           <img class="border border-secondary border-2 rounded-circle" src="images/image-kira.jpg" alt="">
@@ -85,7 +87,7 @@
 
             <!-- columna derecha -->
             <div class="col-12 col-lg-3 p-2">
-              <article class="card h-100 bg-secondary">
+              <article class="card h-100 bg-secondary shadow">
                 <div class="card-body">
                   <div class="d-flex mb-3">
                     <img class="border border-secondary border-2 rounded-circle" src="images/image-patrick.jpg" alt="">
